@@ -1,5 +1,5 @@
 /*
- * Copyright 2024 Laszlo Balazs-Csiki and Contributors
+ * Copyright 2026 Laszlo Balazs-Csiki and Contributors
  *
  * This file is part of Pixelitor. Pixelitor is free software: you
  * can redistribute it and/or modify it under the terms of the GNU
@@ -51,7 +51,7 @@ public class TipsOfTheDay {
             int tipCount = model.getTipCount();
 
             // ensure that the tip index is within valid range
-            nextTipIndex = Math.min(Math.max(nextTipIndex, 0), tipCount - 1);
+            nextTipIndex = Math.clamp(nextTipIndex, 0, tipCount - 1);
 
             var dialogPreferredSize = new Dimension(480, 230);
             var tipOfTheDay = new JXTipOfTheDay(model) {
